--- a/jobs/update-master/templates/config/cloud-provider.ini.erb
+++ b/jobs/update-master/templates/config/cloud-provider.ini.erb
@@ -3,43 +3,43 @@
 [Global]
 
 [ServiceOverride "ec2"]
-URL = "https://ec2.<%= pks.aws_endpoint_url %>"
-SigningRegion = "<%= pks.aws_region %>"
-Region = "<%= pks.aws_region %>"
+URL = "https://ec2.<%= p("pks.aws_endpoint_url") %>"
+SigningRegion = "<%= p("pks.aws_region") %>"
+Region = "<%= p("pks.aws_region") %>"
 SigningMethod = v4
 Service = ec2
 
 [ServiceOverride "elasticloadbalancing"]
-URL = "https://elasticloadbalancing.<%= pks.aws_endpoint_url %>"
-SigningRegion = "<%= pks.aws_region %>"
-Region = "<%= pks.aws_region %>"
+URL = "https://elasticloadbalancing.<%= p("pks.aws_endpoint_url") %>"
+SigningRegion = "<%= p("pks.aws_region") %>"
+Region = "<%= p("pks.aws_region") %>"
 SigningMethod = v4
 Service = elasticloadbalancing
 
 [ServiceOverride "autoscaling"]
-URL = "https://autoscaling.<%= pks.aws_endpoint_url %>"
-SigningRegion = "<%= pks.aws_region %>"
-Region = "<%= pks.aws_region %>"
+URL = "https://autoscaling.<%= p("pks.aws_endpoint_url") %>"
+SigningRegion = "<%= p("pks.aws_region") %>"
+Region = "<%= p("pks.aws_region") %>"
 SigningMethod = v4
 Service = autoscaling
 
 [ServiceOverride "kms"]
-URL = "https://kms.<%= pks.aws_endpoint_url %>"
-SigningRegion = "<%= pks.aws_region %>"
-Region = "<%= pks.aws_region %>"
+URL = "https://kms.<%= p("pks.aws_endpoint_url") %>"
+SigningRegion = "<%= p("pks.aws_region") %>"
+Region = "<%= p("pks.aws_region") %>"
 SigningMethod = v4
 Service = kms
 
 [ServiceOverride "sts"]
-URL = "https://sts.<%= pks.aws_endpoint_url %>"
-SigningRegion = "<%= pks.aws_region %>"
-Region = "<%= pks.aws_region %>"
+URL = "https://sts.<%= p("pks.aws_endpoint_url") %>"
+SigningRegion = "<%= p("pks.aws_region") %>"
+Region = "<%= p("pks.aws_region") %>"
 SigningMethod = v4
 Service = sts
 
 [ServiceOverride "metadata"]
 URL = "http://169.254.169.254"
-SigningRegion = "<%= pks.aws_region %>"
-Region = "<%= pks.aws_region %>"
+SigningRegion = "<%= p("pks.aws_region") %>"
+Region = "<%= p("pks.aws_region") %>"
 SigningMethod = v4
 Service = metadata
